// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentItemToolbar doesn't render move down action in menu if it should be collapsed and \`canMoveDown\` is false 1`] = `
<div class="layout justify-end">
  <div class="flex toolbar-item">
    <div class="v-menu"><button type="button" class="v-btn v-btn--icon theme--light">
        <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">more_vert</i></div>
      </button></div>
  </div>
</div>
`;

exports[`AssessmentItemToolbar doesn't render move up action in menu if it should be collapsed and \`canMoveUp\` is false 1`] = `
<div class="layout justify-end">
  <div class="flex toolbar-item">
    <div class="v-menu"><button type="button" class="v-btn v-btn--icon theme--light">
        <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">more_vert</i></div>
      </button></div>
  </div>
</div>
`;

exports[`AssessmentItemToolbar moves collapsible icons actions above other menu items in collapse mode 1`] = `
<div class="layout justify-end">
  <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-EDIT_ITEM"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">edit</i></div></button></span></div>
  <div class="flex toolbar-item">
    <div class="v-menu"><button type="button" class="v-btn v-btn--icon theme--light">
        <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">more_vert</i></div>
      </button></div>
  </div>
</div>
`;

exports[`AssessmentItemToolbar renders icons 1`] = `
<div class="layout justify-end">
  <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-EDIT_ITEM"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">edit</i></div></button></span></div>
  <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_UP"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">keyboard_arrow_up</i></div></button></span></div>
  <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_DOWN"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">keyboard_arrow_down</i></div></button></span></div>
  <!---->
</div>
`;

exports[`AssessmentItemToolbar renders menu 1`] = `
<div class="layout justify-end">
  <div class="flex toolbar-item">
    <div class="v-menu"><button type="button" class="v-btn v-btn--icon theme--light">
        <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">more_vert</i></div>
      </button></div>
  </div>
</div>
`;

exports[`AssessmentItemToolbar renders move down icon as disabled if canMoveDown is false 1`] = `
<div class="layout justify-end">
  <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_UP"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">keyboard_arrow_up</i></div></button></span></div>
  <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button disabled="disabled" type="button" class="v-btn v-btn--disabled v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_DOWN"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--lighten-2">keyboard_arrow_down</i></div></button></span></div>
  <!---->
</div>
`;

exports[`AssessmentItemToolbar renders move up icon as disabled if canMoveUp is false 1`] = `
<div class="layout justify-end">
  <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button disabled="disabled" type="button" class="v-btn v-btn--disabled v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_UP"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--lighten-2">keyboard_arrow_up</i></div></button></span></div>
  <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_DOWN"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">keyboard_arrow_down</i></div></button></span></div>
  <!---->
</div>
`;
